[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plp-client"
version = "1.0.0"
description = "Official Python client for PLP (Prompt Library Protocol)"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["plp", "prompt", "library", "protocol", "ai", "llm", "openai", "anthropic"]
authors = [
  { name = "GoReal.AI", email = "hello@goreal.ai" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "black>=23.0.0",
  "mypy>=1.0.0",
  "ruff>=0.1.0",
]

[project.urls]
Documentation = "https://github.com/gorealai/plp#readme"
Issues = "https://github.com/gorealai/plp/issues"
Source = "https://github.com/gorealai/plp"

[tool.hatch.build.targets.wheel]
packages = ["src/plp_client"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
